--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,8 +47,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -85,9 +85,10 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Program Files\\Java\\javafx-sdk-21.0.2\\lib" --add-modules=javafx.controls,javafx.fxml --enable-preview
+run.jvmargs=--module-path "C:\\JavaFX\\lib" --add-modules=javafx.controls,javafx.fxml --enable-preview
 run.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${libs.Java_FX_21.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
