Se corriguen algunas funciones, además de agregar interactividad algunos botones, mostrar información en el submenu de Aerca De... y demás funciones. También se terminó de documentar cada una de las clases y generar el Javadoc, por último se agrega la ventana de Puntajes Maximos.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.Java_FX.classpath}
+    ${libs.Java_FX_21.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -108,7 +108,7 @@ run.classpath=\
 run.jvmargs=--module-path "C:\\Program Files\\Java\\javafx-sdk-21.0.3\\lib" --add-modules=javafx.controls,javafx.fxml --enable-preview
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.Java_FX.classpath}
+    ${libs.Java_FX_21.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
