Se crea método para mostrar el acerca de (ayuda) en la clase App, se agregan atributos a los textField cuando son agregados por ayudas o se validan de forma correcta para que no se puedan editar. Se agrega atributo non transversable para los recuadros negros y las letras validadas para que al hacer TAB los omita. Se corrige descripción de los acerca De en los niveles. Se modifica la tabla de puntajes máximos para que solo muestre los 10 más altos, y llene toda la ventana.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.Java_FX_21.classpath}
+    ${libs.Java_FX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
